# crewline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  openapi.json  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_seed_agents.py  0003_auth_tables.py  0004_seed_pm_user.py  0005_seed_agent_credentials.py  0006_mailbox_messages.py  0007_attachments_lifecycle.py  0008_github_runtime_logs.py  0009_rename_agent_ids.py  0010_remove_ticket_qa_notes.py  0011_remove_ready_for_qa_status.py  0012_add_ticket_kind.py
app/: __init__.py  config.py  db.py  enums.py  logging_config.py  main.py  pricing.py
app/api/: dependencies.py  error_handlers.py  pagination.py
app/auth/: credentials.py  csrf.py  middleware.py  passwords.py  permissions.py  sessions.py
app/domain/: actor.py  agents.py  artifacts.py  attachments.py  audit.py  exceptions.py  github.py  mailbox.py  metrics.py  runtime_logs.py  state_machine.py  tickets.py
app/integrations/: github.py
app/models/: __init__.py  agent.py  agent_credential.py  base.py  github_install_state.py  github_installation.py  github_installation_repo.py  mailbox_message.py  runtime_log.py  session.py  ticket.py  ticket_artifact.py  ticket_attachment.py  ticket_audit_log.py  user.py  user_credential.py
app/routes/: __init__.py  agents.py  artifacts.py  attachments.py  audit.py  auth.py  github.py  health.py  mailbox.py  metrics.py  (+4 more)
scripts/: seed_dev_data.py  test-setup.sh
tests/: test_actor.py  test_permissions.py  test_pricing.py  test_state_machine.py
(+35 files in other folders)
